Changed all the solution from Fluids to Gases

--- a/src/main/resources/assets/superpackutils/lang/en_us.json
+++ b/src/main/resources/assets/superpackutils/lang/en_us.json
@@ -83,13 +83,6 @@
   "block.superpackutils.sc_heavy_oil": "Steam-Cracked Heavy Oil",   
   "block.superpackutils.hc_heavy_oil": "Hydro-Cracked Heavy Oil", 
   "block.superpackutils.epoxy_resin": "Epoxy Resin",
-  "block.superpackutils.borax_solution": "Borax Solution", 
-  "block.superpackutils.boron_nitride_solution": "Boron Nitride Solution", 
-  "block.superpackutils.sf_solution": "Sodium Fluoride Solution",
-  "block.superpackutils.pf_solution": "Potassium Fluoride Solution", 
-  "block.superpackutils.ph_solution": "Potassium Hydroxide Solution", 
-  "block.superpackutils.sh_solution": "Sodium Hydroxide Solution", 
-  "block.superpackutils.cs_solution": "Calcium Sulfate Solution",
   "block.superpackutils.plastic_waste": "Liquid Plastic Waste",
 
   "fluid.superpackutils.ethyl_chloride": "Liquid Ethyl Chloride",
@@ -143,13 +136,6 @@
   "fluid.superpackutils.sc_heavy_oil": "Steam-Cracked Heavy Oil",   
   "fluid.superpackutils.hc_heavy_oil": "Hydro-Cracked Heavy Oil",
   "fluid.superpackutils.epoxy_resin": "Epoxy Resin",
-  "fluid.superpackutils.borax_solution": "Borax Solution", 
-  "fluid.superpackutils.boron_nitride_solution": "Boron Nitride Solution", 
-  "fluid.superpackutils.sf_solution": "Sodium Fluoride Solution",
-  "fluid.superpackutils.pf_solution": "Potassium Fluoride Solution", 
-  "fluid.superpackutils.ph_solution": "Potassium Hydroxide Solution", 
-  "fluid.superpackutils.sh_solution": "Sodium Hydroxide Solution", 
-  "fluid.superpackutils.cs_solution": "Calcium Sulfate Solution",
   "fluid.superpackutils.plastic_waste": "Liquid Plastic Waste",
 
   "item.superpackutils.ethyl_chloride_bucket": "Liquid Ethyl Chloride Bucket",
@@ -203,16 +189,16 @@
   "item.superpackutils.hc_heavy_oil_bucket": "Hydro-Cracked Heavy Oil Bucket",
   "item.superpackutils.epoxy_resin_bucket": "Epoxy Resin Bucket",
   "item.superpackutils.ichor_bucket": "Ichor Bucket",
-  "item.superpackutils.borax_solution_bucket": "Borax Solution Bucket", 
-  "item.superpackutils.boron_nitride_solution_bucket": "Boron Nitride Solution Bucket", 
-  "item.superpackutils.sf_solution_bucket": "Sodium Fluoride Solution Bucket",
-  "item.superpackutils.pf_solution_bucket": "Potassium Fluoride Solution Bucket", 
-  "item.superpackutils.ph_solution_bucket": "Potassium Hydroxide Solution Bucket", 
-  "item.superpackutils.sh_solution_bucket": "Sodium Hydroxide Solution Bucket", 
-  "item.superpackutils.cs_solution_bucket": "Calcium Sulfate Solution Bucket",
   "item.superpackutils.plastic_waste_bucket": "Liquid Plastic Waste Bucket",
 
   "gas.superpackutils.ethyl_chloride": "Ethyl Chloride",
+  "gas.superpackutils.borax_solution": "Borax Solution",
+  "gas.superpackutils.bn_solution": "Boron Nitride Solution",
+  "gas.superpackutils.sf_solution": "Sodium Fluoride Solution",
+  "gas.superpackutils.sh_solution": "Sodium Hydroxide Solution",
+  "gas.superpackutils.pf_solution": "Potassium Fluoride Solution",
+  "gas.superpackutils.ph_solution": "Potassium Hydroxide Solution",
+  "gas.superpackutils.cs_solution": "Calcium Sulfate Solution",
   "gas.superpackutils.acetylene": "Acetylene",
   "gas.superpackutils.polyethene": "Polyethylene",
   "gas.superpackutils.stabilizer": "Stabilizer",
