Added Manganese Nugget & Blocks

--- a/src/main/resources/assets/superpackutils/lang/en_us.json
+++ b/src/main/resources/assets/superpackutils/lang/en_us.json
@@ -11,6 +11,7 @@
   "block.superpackutils.cupronickel_block": "Cupronickel Block",
   "block.superpackutils.infused_uranium_ore": "Infused Uranium Ore",
   "block.superpackutils.platinum_block": "Platinum Block",
+  "block.superpackutils.manganese_block": "Manganese Block",
   "block.superpackutils.redstone_clock": "Redstone Clock",
   "block.superpackutils.dark_steel_block": "Dark Steel Block",
   "block.superpackutils.metallurgic_casing": "Metallurgic Casing",
@@ -425,6 +426,7 @@
   "item.superpackutils.platinum_ingot": "Platinum Ingot",
   "item.superpackutils.platinum_nugget": "Platinum Nugget",
   "item.superpackutils.plough": "Plough",
+  "item.superpackutils.manganese_nugget": "Manganese Nugget",
   "item.superpackutils.silver_ore_piece": "Silver Ore Piece",
   "item.superpackutils.steel_gear": "Steel Gear",
   "item.superpackutils.tin_ore_piece": "Tin Ore Piece",
