--- a/src/main/resources/assets/superpackutils/lang/en_us.json
+++ b/src/main/resources/assets/superpackutils/lang/en_us.json
@@ -450,7 +450,7 @@
   "item.superpackutils.dark_steel_nugget": "Dark Steel Nugget",
   "item.superpackutils.powered_substance": "Powered Substance",
   "item.superpackutils.radioactive_fabric": "Hazmat Fabric",
-  "item.superpackutils.dark_steel_dust": "Dark Steel Dust",
+  "item.superpackutils.polished_mana_quartz": "Polished Mana Quartz",
   "item.superpackutils.destroyer_of_the_nature": "Destroyer Of The Nature",
 
   "itemGroup.superpackutils": "SuperPack: Utils",
