Added Tiny Moon, Energetic Alloy Dust and Vibrant Alloy Dust

--- a/src/main/resources/assets/superpackutils/lang/en_us.json
+++ b/src/main/resources/assets/superpackutils/lang/en_us.json
@@ -467,6 +467,9 @@
   "item.superpackutils.destroyer_of_the_nature": "Destroyer Of The Nature",
   "item.superpackutils.energetic_alloy_nugget": "Energetic Alloy Nugget",
   "item.superpackutils.vibrant_alloy_nugget": "Vibrant Alloy Nugget",
+  "item.superpackutils.vibrant_alloy_dust": "Vibrant Alloy Dust",
+  "item.superpackutils.energetic_alloy_dust": "Energetic Alloy Dust",
+  "item.superpackutils.tiny_moon": "Tiny Moon",
 
   "itemGroup.superpackutils": "SuperPack: Utils",
 
