Added Molten Alfsteel, Crystaltine, Elementium and Manasteel

--- a/src/main/resources/assets/superpackutils/lang/en_us.json
+++ b/src/main/resources/assets/superpackutils/lang/en_us.json
@@ -93,6 +93,11 @@
   "block.superpackutils.plastic_waste": "Liquid Plastic Waste",
   "block.superpackutils.pressurized_hydrogen": "Pressurized Hydrogen",
   "block.superpackutils.pressurized_steam": "Pressurized Steam",
+  "block.superpackutils.molten_manasteel": "Molten Manasteel",
+  "block.superpackutils.molten_terrasteel": "Molten Terrasteel",
+  "block.superpackutils.molten_alfsteel": "Molten Alfsteel",
+  "block.superpackutils.molten_elementium": "Molten Elementium",
+  "block.superpackutils.molten_crystaltine": "Molten Crystaltine",
 
   "fluid.superpackutils.ethyl_chloride": "Liquid Ethyl Chloride",
   "fluid.superpackutils.acetylene": "Liquid Acetylene",
@@ -148,6 +153,11 @@
   "fluid.superpackutils.plastic_waste": "Liquid Plastic Waste",
   "fluid.superpackutils.pressurized_hydrogen": "Pressurized Hydrogen",
   "fluid.superpackutils.pressurized_steam": "Pressurized Steam",
+  "fluid.superpackutils.molten_manasteel": "Molten Manasteel",
+  "fluid.superpackutils.molten_terrasteel": "Molten Terrasteel",
+  "fluid.superpackutils.molten_alfsteel": "Molten Alfsteel",
+  "fluid.superpackutils.molten_elementium": "Molten Elementium",
+  "fluid.superpackutils.molten_crystaltine": "Molten Crystaltine",
 
   "item.superpackutils.ethyl_chloride_bucket": "Liquid Ethyl Chloride Bucket",
   "item.superpackutils.acetylene_bucket": "Liquid Acetylene Bucket",
@@ -203,6 +213,11 @@
   "item.superpackutils.plastic_waste_bucket": "Liquid Plastic Waste Bucket",
   "item.superpackutils.pressurized_hydrogen_bucket": "Pressurized Hydrogen Bucket",
   "item.superpackutils.pressurized_steam_bucket": "Pressurized Steam Bucket",
+  "item.superpackutils.molten_manasteel_bucket": "Molten Manasteel Bucket",
+  "item.superpackutils.molten_terrasteel_bucket": "Molten Terrasteel Bucket",
+  "item.superpackutils.molten_alfsteel_bucket": "Molten Alfsteel Bucket",
+  "item.superpackutils.molten_elementium_bucket": "Molten Elementium Bucket",
+  "item.superpackutils.molten_crystaltine_bucket": "Molten Crystaltine Bucket",
 
   "gas.superpackutils.ethyl_chloride": "Ethyl Chloride",
   "gas.superpackutils.borax_solution": "Borax Solution",
