Added Enriched Carbon Brick

--- a/src/main/resources/assets/superpackutils/lang/en_us.json
+++ b/src/main/resources/assets/superpackutils/lang/en_us.json
@@ -493,6 +493,7 @@
   "item.superpackutils.improved_logic_circuit": "Improved Logic Circuit",
   "item.superpackutils.advanced_logic_circuit": "Advanced Logic Circuit",
   "item.superpackutils.withering_logic_circuit": "Withering Logic Circuit",
+  "item.superpackutils.enriched_carbon_brick": "Enriched Carbon Brick",
 
   "itemGroup.superpackutils": "SuperPack: Utils",
 
