--- a/src/main/resources/assets/superpackutils/lang/en_us.json
+++ b/src/main/resources/assets/superpackutils/lang/en_us.json
@@ -500,6 +500,21 @@
   "item.superpackutils.advanced_logic_circuit": "Advanced Logic Circuit",
   "item.superpackutils.withering_logic_circuit": "Withering Logic Circuit",
   "item.superpackutils.enriched_carbon_brick": "Enriched Carbon Brick",
+  "item.superpackutils.tiny_aluminum_dust": "Tiny Aluminum Dust",
+  "item.superpackutils.tiny_copper_dust": "Tiny Copper Dust",
+  "item.superpackutils.tiny_gold_dust": "Tiny Gold Dust",
+  "item.superpackutils.tiny_iron_dust": "Tiny Iron Dust",
+  "item.superpackutils.tiny_lead_dust": "Tiny Lead Dust",
+  "item.superpackutils.tiny_nickel_dust": "Tiny Nickel Dust",
+  "item.superpackutils.tiny_platinum_dust": "Tiny Platinum Dust",
+  "item.superpackutils.tiny_silver_dust": "Tiny Silver Dust",
+  "item.superpackutils.tiny_tin_dust": "Tiny Tin Dust",
+  "item.superpackutils.tiny_osmium_dust": "Tiny Osmium Dust",
+  "item.superpackutils.tiny_uranium_dust": "Tiny Uranium Dust",
+  "item.superpackutils.tiny_zinc_dust": "Tiny Zinc Dust",
+  "item.superpackutils.tiny_cobalt_dust": "Tiny Cobalt Dust",
+  "item.superpackutils.tiny_manganese_dust": "Tiny Manganese Dust",
+  "item.superpackutils.tiny_depleted_mythril_dust": "Tiny Depleted Mythril Dust",
 
   "itemGroup.superpackutils": "SuperPack: Utils",
 
