Added Hydrogen Cyanide

--- a/src/main/resources/assets/superpackutils/lang/en_us.json
+++ b/src/main/resources/assets/superpackutils/lang/en_us.json
@@ -100,6 +100,7 @@
   "block.superpackutils.molten_crystaltine": "Molten Crystaltine",
   "block.superpackutils.primal_mana": "Primal Mana",
   "block.superpackutils.pahoehoe_lava": "Pahoehoe Lava",
+  "block.superpackutils.hydrogen_cyanide": "Liquid Hydrogen Cyanide",
 
   "fluid.superpackutils.ethyl_chloride": "Liquid Ethyl Chloride",
   "fluid.superpackutils.acetylene": "Liquid Acetylene",
@@ -162,6 +163,7 @@
   "fluid.superpackutils.molten_crystaltine": "Molten Crystaltine",
   "fluid.superpackutils.primal_mana": "Primal Mana",
   "fluid.superpackutils.pahoehoe_lava": "Pahoehoe Lava",
+  "fluid.superpackutils.hydrogen_cyanide": "Liquid Hydrogen Cyanide",
 
   "item.superpackutils.ethyl_chloride_bucket": "Liquid Ethyl Chloride Bucket",
   "item.superpackutils.acetylene_bucket": "Liquid Acetylene Bucket",
@@ -224,6 +226,7 @@
   "item.superpackutils.molten_crystaltine_bucket": "Molten Crystaltine Bucket",
   "item.superpackutils.primal_mana_bucket": "Primal Mana Bucket",
   "item.superpackutils.pahoehoe_lava_bucket": "Pahoehoe Lava Bucket",
+  "item.superpackutils.hydrogen_cyanide_bucket": "Liquid Hydrogen Cyanide Bucket",
 
   "gas.superpackutils.ethyl_chloride": "Ethyl Chloride",
   "gas.superpackutils.borax_solution": "Borax Solution",
