Added lang for Hydrogen Cyanide

--- a/src/main/resources/assets/superpackutils/lang/en_us.json
+++ b/src/main/resources/assets/superpackutils/lang/en_us.json
@@ -287,6 +287,7 @@
   "gas.superpackutils.violet_corundum": "Violet Corundum",
   "gas.superpackutils.white_corundum": "White Corundum",
   "gas.superpackutils.black_corundum": "Black Corundum",
+  "gas.superpackutils.hydrogen_cyanide": "Hydrogen Cyanide",
 
   "infuse_type.superpackutils.petroleum_coke": "Petroleum Coke",
   "infuse_type.superpackutils.slime_crystal": "Crystallized Slime",
