Added Integrated Circuit and Manganese Alloy Ingot

--- a/src/main/resources/assets/superpackutils/lang/en_us.json
+++ b/src/main/resources/assets/superpackutils/lang/en_us.json
@@ -531,6 +531,8 @@
   "item.superpackutils.tiny_cobalt_dust": "Tiny Cobalt Dust",
   "item.superpackutils.tiny_manganese_dust": "Tiny Manganese Dust",
   "item.superpackutils.tiny_depleted_mythril_dust": "Tiny Depleted Mythril Dust",
+  "item.superpackutils.platinum_manganese_alloy_ingot": "Platinum-Manganese Alloy Ingot",
+  "item.superpackutils.integrated_circuit": "Integrated Circuit",
 
   "itemGroup.superpackutils": "SuperPack: Utils",
 
