Added Resonating Coil

--- a/src/main/resources/assets/superpackutils/lang/en_us.json
+++ b/src/main/resources/assets/superpackutils/lang/en_us.json
@@ -533,6 +533,7 @@
   "item.superpackutils.tiny_depleted_mythril_dust": "Tiny Depleted Mythril Dust",
   "item.superpackutils.platinum_manganese_alloy_ingot": "Platinum-Manganese Alloy Ingot",
   "item.superpackutils.integrated_circuit": "Integrated Circuit",
+  "item.superpackutils.resonating_coil": "Resonating Coil",
 
   "itemGroup.superpackutils": "SuperPack: Utils",
 
