--- a/src/main/resources/assets/superpackutils/lang/en_us.json
+++ b/src/main/resources/assets/superpackutils/lang/en_us.json
@@ -105,6 +105,8 @@
   "block.superpackutils.molten_blizz": "Molten Blizz",
   "block.superpackutils.molten_blitz": "Molten Blitz",
   "block.superpackutils.molten_basalz": "Molten Basalz",
+  "block.superpackutils.distilled_water": "Distilled Water",
+  "block.superpackutils.condensed_water": "Condensed Water",
 
   "fluid.superpackutils.ethyl_chloride": "Liquid Ethyl Chloride",
   "fluid.superpackutils.acetylene": "Liquid Acetylene",
@@ -172,6 +174,8 @@
   "fluid.superpackutils.molten_blizz": "Molten Blizz",
   "fluid.superpackutils.molten_blitz": "Molten Blitz",
   "fluid.superpackutils.molten_basalz": "Molten Basalz",
+  "fluid.superpackutils.distilled_water": "Distilled Water",
+  "fluid.superpackutils.condensed_water": "Condensed Water",
 
   "item.superpackutils.ethyl_chloride_bucket": "Liquid Ethyl Chloride Bucket",
   "item.superpackutils.acetylene_bucket": "Liquid Acetylene Bucket",
@@ -239,6 +243,8 @@
   "item.superpackutils.molten_blizz_bucket": "Molten Blizz Bucket",
   "item.superpackutils.molten_blitz_bucket": "Molten Blitz Bucket",
   "item.superpackutils.molten_basalz_bucket": "Molten Basalz Bucket",
+  "item.superpackutils.distilled_water_bucket": "Distilled Water Bucket",
+  "item.superpackutils.condensed_water_bucket": "Condensed Water Bucket",
 
   "gas.superpackutils.ethyl_chloride": "Ethyl Chloride",
   "gas.superpackutils.borax_solution": "Borax Solution",
