Added Redstone Wire

--- a/src/main/resources/assets/superpackutils/lang/en_us.json
+++ b/src/main/resources/assets/superpackutils/lang/en_us.json
@@ -512,6 +512,7 @@
   "item.superpackutils.vibrant_alloy_dust": "Vibrant Alloy Dust",
   "item.superpackutils.energetic_alloy_dust": "Energetic Alloy Dust",
   "item.superpackutils.tiny_moon": "Tiny Moon",
+  "item.superpackutils.redstone_wire": "Redstone Wire",
   "item.superpackutils.basic_circuit": "Raw Basic Logic Circuit",
   "item.superpackutils.improved_circuit": "Raw Improved Logic Circuit",
   "item.superpackutils.advanced_circuit": "Raw Advanced Logic Circuit",
