Added Blood Crystal

--- a/src/main/resources/assets/superpackutils/lang/en_us.json
+++ b/src/main/resources/assets/superpackutils/lang/en_us.json
@@ -542,6 +542,7 @@
   "item.superpackutils.resonating_coil": "Resonating Coil",
   "item.superpackutils.inductive_control_circuit": "\u00A76Inductive Control Circuit",
   "item.superpackutils.combusting_alloy": "\u00A7eCombusting Alloy",
+  "item.superpackutils.blood_crystal": "Blood Crystal",
 
   "itemGroup.superpackutils": "SuperPack: Utils",
 
