Ichor Crystal color changes and Crystallized Blood infuse type

--- a/src/main/resources/assets/superpackutils/lang/en_us.json
+++ b/src/main/resources/assets/superpackutils/lang/en_us.json
@@ -299,6 +299,7 @@
   "infuse_type.superpackutils.slime_crystal": "Crystallized Slime",
   "infuse_type.superpackutils.skyslime_crystal": "Crystallized Skyslime",
   "infuse_type.superpackutils.enderslime_crystal": "Crystallized Enderslime",
+  "infuse_type.superpackutils.blood_crystal": "Crystallized Blood",
   "infuse_type.superpackutils.ichor_crystal": "Crystallized Ichor",
   "infuse_type.superpackutils.alchemical_nickel": "Alchemical Nickel",
   "infuse_type.superpackutils.alchemical_iron": "Alchemical Iron",
