--- a/src/main/resources/assets/superpackutils/lang/en_us.json
+++ b/src/main/resources/assets/superpackutils/lang/en_us.json
@@ -544,6 +544,7 @@
   "item.superpackutils.inductive_control_circuit": "\u00A76Inductive Control Circuit",
   "item.superpackutils.combusting_alloy": "\u00A7eCombusting Alloy",
   "item.superpackutils.blood_crystal": "Blood Crystal",
+  "item.superpackutils.blank_tier_installer": "Blank Tier Installer",
 
   "itemGroup.superpackutils": "SuperPack: Utils",
 
