--- a/src/main/resources/assets/superpackutils/lang/en_us.json
+++ b/src/main/resources/assets/superpackutils/lang/en_us.json
@@ -107,6 +107,7 @@
   "block.superpackutils.molten_basalz": "Molten Basalz",
   "block.superpackutils.distilled_water": "Distilled Water",
   "block.superpackutils.coolant": "Coolant",
+  "block.superpackutils.grassoline": "Grassoline",
 
   "fluid.superpackutils.ethyl_chloride": "Liquid Ethyl Chloride",
   "fluid.superpackutils.acetylene": "Liquid Acetylene",
@@ -176,6 +177,7 @@
   "fluid.superpackutils.molten_basalz": "Molten Basalz",
   "fluid.superpackutils.distilled_water": "Distilled Water",
   "fluid.superpackutils.coolant": "Coolant",
+  "fluid.superpackutils.grassoline": "Grassoline",
 
   "item.superpackutils.ethyl_chloride_bucket": "Liquid Ethyl Chloride Bucket",
   "item.superpackutils.acetylene_bucket": "Liquid Acetylene Bucket",
@@ -245,6 +247,7 @@
   "item.superpackutils.molten_basalz_bucket": "Molten Basalz Bucket",
   "item.superpackutils.distilled_water_bucket": "Distilled Water Bucket",
   "item.superpackutils.coolant_bucket": "Coolant Bucket",
+  "item.superpackutils.grassoline_bucket": "Grassoline Bucket",
 
   "gas.superpackutils.ethyl_chloride": "Ethyl Chloride",
   "gas.superpackutils.borax_solution": "Borax Solution",
