Added NAND Chip

--- a/src/main/resources/assets/superpackutils/lang/en_us.json
+++ b/src/main/resources/assets/superpackutils/lang/en_us.json
@@ -548,6 +548,7 @@
   "item.superpackutils.combusting_alloy": "\u00A7eCombusting Alloy",
   "item.superpackutils.blood_crystal": "Blood Crystal",
   "item.superpackutils.blank_tier_installer": "Blank Tier Installer",
+  "item.superpackutils.nand_chip": "NAND Chip",
 
   "itemGroup.superpackutils": "SuperPack: Utils",
 
