Added Data Core, Blaze Ashes and Updated Textures

--- a/src/main/resources/assets/superpackutils/lang/en_us.json
+++ b/src/main/resources/assets/superpackutils/lang/en_us.json
@@ -558,6 +558,8 @@
   "item.superpackutils.antimony_nugget": "Antimony Nugget",
   "item.superpackutils.antimony_dust": "Antimony Dust",
   "item.superpackutils.tiny_antimony_dust": "Tiny Antimony Dust",
+  "item.superpackutils.blaze_ashes": "Blaze Ashes",
+  "item.superpackutils.data_core": "Data Core",
 
   "itemGroup.superpackutils": "SuperPack: Utils",
 
