Added Silicon Tetrachloride

--- a/src/main/resources/assets/superpackutils/lang/en_us.json
+++ b/src/main/resources/assets/superpackutils/lang/en_us.json
@@ -110,6 +110,7 @@
   "block.superpackutils.coolant": "Coolant",
   "block.superpackutils.grassoline": "Grassoline",
   "block.superpackutils.helium": "Liquid Helium",
+  "block.superpackutils.silicon_tetrachloride": "Liquid Silicon Tetrachloride",
 
   "fluid.superpackutils.ethyl_chloride": "Liquid Ethyl Chloride",
   "fluid.superpackutils.acetylene": "Liquid Acetylene",
@@ -181,6 +182,7 @@
   "fluid.superpackutils.coolant": "Coolant",
   "fluid.superpackutils.grassoline": "Grassoline",
   "fluid.superpackutils.helium": "Liquid Helium",
+  "fluid.superpackutils.silicon_tetrachloride": "Liquid Silicon Tetrachloride",
 
   "item.superpackutils.ethyl_chloride_bucket": "Liquid Ethyl Chloride Bucket",
   "item.superpackutils.acetylene_bucket": "Liquid Acetylene Bucket",
@@ -252,6 +254,7 @@
   "item.superpackutils.coolant_bucket": "Coolant Bucket",
   "item.superpackutils.grassoline_bucket": "Grassoline Bucket",
   "item.superpackutils.helium_bucket": "Liquid Helium Bucket",
+  "item.superpackutils.silicon_tetrachloride_bucket": "Liquid Silicon Tetrachloride Bucket",
 
   "gas.superpackutils.ethyl_chloride": "Ethyl Chloride",
   "gas.superpackutils.borax_solution": "Borax Solution",
